--- a/cell03/ex04/ex03bis/index.html
+++ b/cell03/ex04/ex03bis/index.html
@@ -13,10 +13,10 @@
    </head>
    <style>
      #ft_list > div {
-       margin: 10px;
+       margin: 30px;
        background-color: #66ff00;
-       padding: 10px;
-       border-radius: 10px;
+       padding: 20px;
+       border-radius: 30px;
        cursor: pointer;
      }
      #ft_list > div:hover {
@@ -24,7 +24,7 @@
      }
    </style>
    <body>
-     <div style="width: 100%; text-align: center">
+     <div style="width: 100%; text-align: left">
        <h1>TODO LIST</h1>
        <div
          style="margin-left: auto; margin-right: auto; padding: 10px"
