--- a/cell03/ex04/ex03bis/index.html
+++ b/cell03/ex04/ex03bis/index.html
@@ -24,7 +24,7 @@
      }
    </style>
    <body>
-     <div style="width: 100%; text-align: center">
+     <div style="width: 100%; text-align: left">
        <h1>TODO LIST</h1>
        <div
          style="margin-left: auto; margin-right: auto; padding: 10px"
