--- a/rush/port.html
+++ b/rush/port.html
@@ -50,7 +50,7 @@
 
     <h1>Welcome to Portfolio</h1>
 
-    <a href="plew.html">
+    <a href="rush/plew.html">
         <button>Go to Plew Port</button>
     </a>
 
