--- a/rush/plew.html
+++ b/rush/plew.html
@@ -86,7 +86,7 @@
     <p>ประวัติโดยย่อ</p>
     <p>สวัสดีครับ ผมชื่อ กฤษดา สว่างอารมณ์ อายุ 20 ปี เชื้อชาติ ไทย สัญชาติไทย ศาสนา พุทธ งานอดิเรก คือ การอ่าหนังสือและฟังเพลงครับ </p>
 
-    <img src="plew.jpg" alt="รูปตัวอย่าง">
+    <img src="./rush/plew.jpg" alt="รูปตัวอย่าง">
 
     
     <a href="port.html">
