--- a/rush/Portplew.html
+++ b/rush/Portplew.html
@@ -76,7 +76,7 @@
     <h1>นี่คือผลงานของผมครับ</h1>
     <p>Dante Certificate</p>
 
-    <img src="dante.png" alt="Dante Certificate">
+    <img src="./rush/dante.png" alt="Dante Certificate">
 
     
     <button class="btn-back" onclick="window.location.href='plew.html'">Go to Plew Port</button>
