--- a/rush/port.html
+++ b/rush/port.html
@@ -54,7 +54,7 @@
         <button>Go to Plew Port</button>
     </a>
 
-    <a href="poopha.html">
+    <a href="rush/poopha.html">
         <button>Go to Poopha Port</button>
     </a>
 
