--- a/rush/poopha.html
+++ b/rush/poopha.html
@@ -87,15 +87,15 @@
     <p>สวัสดีครับ ชื่อ : นาย ชัยธวัช ไชยโภค ชื่อเล่น : ภูผา วัน/เดือน/ปี เกิด : 24/08/2547  เชื้อชาติ:ไทย  สัญชาติ : ไทย ศาสนา : พุทธ
 งานอดิเรก : เล่นกีฬา , ออกกำลังกาย </p>
 
-    <img src="poophaa.jpg" alt>
+    <img src="./rush/poophaa.jpg" alt>
 
     
-    <a href="port.html">
+    <a href="./rush/port.html">
         <button class="btn-back">Back to home Port</button>
     </a>
 
     
-    <a href="poopa.html">
+    <a href="./rush/poopa.html">
         <button class="btn-next">Go to Next Page</button>
     </a>
 
